--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trl",
-  "description": "a Unix CLI for transforming (reformatting) lists of unquoted or quoted strings",
+  "description": "Unix CLI for transforming (reformatting) lists of unquoted or quoted strings.",
   "private": false,
-  "version": "0.3.1",
+  "version": "0.3.2",
   "os": [
     "linux",
     "darwin"
