--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trl",
   "description": "Unix CLI for transforming (reformatting) lists of unquoted or quoted strings.",
   "private": false,
-  "version": "0.3.2",
+  "version": "0.3.3",
   "os": [
     "linux",
     "darwin"
@@ -35,15 +35,18 @@
   "net_same2u": {
     "make_pkg": {
       "tocOn": true,
-      "tocTitle": "**Contents**"
+      "tocTitle": "**Contents**",
+      "manOn": true
     }
   },
   "devDependencies": {
     "doctoc": "^0.13.0",
     "json": "^9.0.3",
+    "marked-man": "^0.1.5",
     "replace": "^0.3.0",
     "semver": "^4.2.0",
     "tap": "^0.6.0",
     "urchin": "^0.0.5"
-  }
+  },
+  "man": "./man/trl.1"
 }
